--- a/src/tool.yml
+++ b/src/tool.yml
@@ -507,9 +507,58 @@ tools:
         description: Start date for the simulation ("%Y-%m-%d %H:%M:%S")
       time.unit: 
         type: string
-        description: Time units of the precipitation record
+        description: |
+          Time units of the precipitation and climate record (must be
+          the same at the moment)
       faktor.p:
         type: float
         description: |
           Conversion factor for rain rate to m/s (only needed if rate is NOT 
           given as mm per 'time.unit')
+      climadat:
+        type: file
+        description: |
+          Climate data: data frame with time since start date in the first column, 
+          and a climate record in subsequent columns. The climate record holds:
+            - 'GlobRad':  Global radiation [W/m²]                  
+            - 'NetRad':   Net radiation [W/m²]                     
+            - 'Temp':     Temperature [°C]                         
+            - 'RelHum':   Relative humidity [%]                    
+            - 'vWind':    Wind velocity [m/s]                      
+            - 'dirWind':  Wind direction [°, clockwise from North]
+      rBilart: 
+        type: integer
+        description: |
+          Climate file type; specifies whether net radiation is computed (1),
+          or measured values are to be used (2)
+      ref.height:
+        type: float
+        description: Reference height of wind speed measurement
+      sw0:
+        type: float
+        description: |
+          Factor relating short wave radiation balance and net radiation, 
+          to be calibrated
+      sw1:
+        type: float
+        description: |
+          Factor relating short wave radiation balance and net radiation, 
+          to be calibrated
+      sw2:
+        type: float
+        description: |
+          Factor relating short wave radiation balance and net radiation, 
+          to be calibrated
+      trueb:
+        type: float
+        description: |
+          Factor for atmospheric dimming under consideration of water vapour 
+          pressure, to be calibrated against clear sky radiation data
+      truebf:
+        type: float
+        description: |
+          Factor for atmospheric dimming under consideration of water vapour 
+          pressure, to be calibrated against clear sky radiation data
+      NA.flag:
+        type: float
+        description: Flag for NA in the input data
